--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-fast-marquee": "^1.3.5",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
+    "splitting": "^1.0.6",
     "swiper": "^8.4.2",
     "web-vitals": "^2.1.4"
   },
